@startuml
' =========================
' Domain model (Mongoose)
' =========================
skinparam classAttributeIconSize 0
hide methods

class User {
  +_id: ObjectId
  +name: string
  +email: string
  +password: string
  +role: "player" | "owner"
  +isActive: boolean
  +createdAt: Date
  +updatedAt: Date
}

class Struttura {
  +_id: ObjectId
  +name: string
  +description: string?
  +owner: ObjectId (ref User)
  +location.address: string
  +location.city: string
  +location.lat: number
  +location.lng: number
  +location.coordinates: [number, number]
  +amenities: any
  +openingHours: any
  +images: string[]
  +rating.average: number
  +rating.count: number
  +isActive: boolean
  +isFeatured: boolean
  +isDeleted: boolean
  +createdAt: Date
  +updatedAt: Date
}

class Campo {
  +_id: ObjectId
  +struttura: ObjectId (ref Struttura)
  +name: string
  +sport: "beach_volley" | "padel" | "tennis"
  +surface: "sand" | "hardcourt" | "grass"
  +maxPlayers: number
  +indoor: boolean
  +pricePerHour: number
  +isActive: boolean
  +createdAt: Date
  +updatedAt: Date
}

class Booking {
  +_id: ObjectId
  +user: ObjectId (ref User)
  +campo: ObjectId (ref Campo)
  +date: string
  +startTime: string
  +endTime: string
  +price: number
  +status: "confirmed" | "cancelled"
  +createdAt: Date
  +updatedAt: Date
}

User "1" --> "0..*" Struttura : owner
User "1" --> "0..*" Booking : prenota
Struttura "1" --> "0..*" Campo : contiene
Campo "1" --> "0..*" Booking : prenotazioni
@enduml
